# nukkit

./: .gitignore
back/: Cargo.toml
back/src/: main.rs
front/: package-lock.json  package.json  tailwind.config.js
front-wasm/: Cargo.toml
front-wasm/src/: lib.rs
front/src/: app.html
front/src/lib/: index.ts
front/src/routes/: +layout.svelte  +page.svelte
