[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
futures = "0.3.30"
lazy_static = "1.4.0"
rustls-acme = { version = "0.9.2", features = ["axum"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "set-header"] }
